# gedcom-rs

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
benches/: parse_gedcom.rs
data/: complete.ged
docs/: ENCODING.md  ROADMAP.md
examples/: advanced_relationships.rs  basic_parse.rs  basic_relationships.rs  config.rs  family_tree.rs  find_person.rs  find_relationship.rs  search_by_date.rs  search_individuals.rs
src/: error.rs  lib.rs  main.rs  parse.rs
src/types/: address.rs  adopted_by.rs  change_date.rs  character_set.rs  copyright.rs  corporation.rs  datetime.rs  event.rs  family.rs  gedc.rs  header.rs  line.rs  map.rs  mod.rs  multimedia_record.rs  note.rs  note_record.rs  object.rs  pedigree.rs  place.rs  quay.rs  repository_record.rs  source.rs  source_citation.rs  source_record.rs  sourcedata.rs  spouse.rs  submission.rs  submitter.rs  xref.rs
src/types/individual/: adoption.rs  birth.rs  christening.rs  death.rs  event.rs  gender.rs  individual.rs  mod.rs  name.rs  note.rs  residence.rs  source.rs
tests/: edge_cases.rs  integration_tests.rs
