[package]
name = "gedcom-rs"
description = "A Rust library to parse and interact with GEDCOM data."
homepage = "https://github.com/AdamIsrael/gedcom-rs"
documentation = "https://github.com/AdamIsrael/gedcom-rs"
repository = "https://github.com/AdamIsrael/gedcom-rs"
readme = "README.md"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
keywords = ["gedcom"]
categories = ["data-structures", "parser-implementations", "parsing"]

[dependencies]
smallvec = "1.10.0"
winnow = "0.5.28"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "parse_gedcom"
harness = false
