[package]
name = "gedcom-rs"
description = "A Rust library for parsing GEDCOM 5.5.1 genealogical data files with support for multiple character encodings"
homepage = "https://github.com/AdamIsrael/gedcom-rs"
documentation = "https://docs.rs/gedcom-rs"
repository = "https://github.com/AdamIsrael/gedcom-rs"
readme = "README.md"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
keywords = ["gedcom", "genealogy", "parser", "family-tree", "ancestry"]
categories = ["data-structures", "parser-implementations", "parsing", "encoding"]
exclude = [
    ".vscode/*",
    "data/*",
]

[lints.clippy]
# Deny unwrap usage in production code (tests are allowed)
unwrap_used = "deny"
expect_used = "warn"
# Additional safety lints
indexing_slicing = "warn"
panic = "warn"

[dependencies]
smallvec = "1.10.0"
winnow = "0.5.40"
encoding_rs = "0.8"
clap = { version = "4.5", features = ["derive"] }
tabled = "0.16"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
tempfile = "3.13"

[[bench]]
name = "parse_gedcom"
harness = false
